src/test/ui/error-codes/E0008.stderr
error[E0008]: cannot bind by-move into a pattern guard
  --> $DIR/E0008.rs:13:14
   |
13 |         Some(s) if s.len() == 0 => {},
   |              ^ moves value into pattern guard

error: aborting due to previous error

